Stylesheet/emote/tag updates 2014-08-03

--- a/source-css/adery.css
+++ b/source-css/adery.css
@@ -1,3 +1,7 @@
+.arrow.up { background: url(%%upsmirk%%) no-repeat 0 0; }
+.arrow.upmod { background: url(%%upsmirked%%) no-repeat 0 0; }
+.arrow.down { background: url(%%downfrown%%) no-repeat 0 0; }
+.arrow.downmod { background: url(%%downfrowned%%) no-repeat 0 0; }
 
 .sidecontentbox .helplink + .title > h1 {
     color: white !important;
