--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -161,9 +161,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:500px;
+ height:750px;
  width:100%;
- background-image:url(%%wearewatching%%);
+ background-image:url(%%brodiebelle%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1274,6 +1274,20 @@ a[href|="/tavicheer"] {
 /*.flair-flash {background-position: 0% -2100%}*/
 .flair-flash {background-position: -200% -1900%} /*FLASH GORDON! SAVIOR OF THE UNIVERSE!*/
 .flair-sunset {background-position: -100% -2100%}
+.flair-gilda {background-position: -200% -2100%}
+/*
+.flair-photofinish {background-position: -300% -2100%}
+
+.flair-rrainbowdash {background-position: 0 -2200%}
+.flair-rtwilightsparkle {background-position: -100% -2200%}
+.flair-rfluttershy {background-position: -200% -2200%}
+.flair-rapplejack {background-position: -300% -2200%}
+
+.flair-rpinkiepie {background-position: 0 -2300%}
+.flair-rrarity {background-position: -100% -2300%}
+.flair-flutterbat {background-position: -200% -2300%}
+.flair-nightmarity {background-position: -300% -2300%}
+You need DC's new flair image to make these active*/
 
 /*HOVER FLAIRS! Because yay. Follow same formating to make a new one*/
 
