--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -130,7 +130,7 @@ a[href|="/filly"]
 
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
 
-.author[href$="/PresidentCelestia"]:after {content: ' Of Flynt Coal ';}
+.author[href$="/Pres"]:after {content: ' Of Flynt Coal ';}
 
 .author:before {content: 'Queen ';}
 
@@ -344,7 +344,9 @@ background:url(%%BerryMail%%);
 /*The End of the Mega Awesome /r/Berrytrain exclusive mail changer machine 4200 with air conditioning and scones*/
 
 .author[href$="/KillerRabbit1253"]:before {content: 'King Queen ' ;}
-.author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy' ;}
+.author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy ' ;}
+.author[href$="/CrystalLord"]:after {content: ' of lording crystals' ;}
+
 
 .author[href$="HonorInDefeat"]:after {content: ' of Disney Songs' ;}
 
