--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -1092,3 +1092,11 @@ width:900px !important;
 .stylesheet-customize-container textarea {
     height: 500px
     }
+a[href|="/conkycool"], a[href|="/lazybear"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 655px;
+    height: 680px;
+    background-image: url(%%tacopls%%)
+    }
