--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -313,6 +313,16 @@ display:block;clear:none;float:left;width:261px;height:192px;background-image:ur
 background-position:0 0;
 }
 
+a[href|="/maudcrunchy"] {
+display:block;clear:none;float:left;width:192px;height:150px;background-image:url(%%maudcrunch%%)!important;
+background-position:0 0;
+}
+
+a[href|="/rockmuffin"] {
+display:block;clear:none;float:left;width:175px;height:200px;background-image:url(%%muffinrocks%%)!important;
+background-position:0 0;
+}
+
 a[href|="/maudpinkiehug"] {
 display:block;clear:none;float:left;width:200px;height:142px;background-image:url(%%maudpinkiehug%%)!important;
 background-position:0 0;
