--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -416,7 +416,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -481,7 +481,7 @@ a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitf
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 /* Misfits h */
-a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"]
+a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"], a[href|="/piracybloom"], a[href|="/surprisedzecora"], a[href|="/spitheart"], a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"]
 {background-image:url(%%misfitsh%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -622,7 +622,7 @@ a[href|="/rarishibe"], a[href|="/discentiahurry"], a[href|="/ddsad"]
 {background-position: -0% -1100%;}
 
 /* Grid pos 1,11 'motes */
-a[href|="/karmacute"]
+a[href|="/karmacute"], a[href|="/goodyear"]
 {background-position: -100% -1100%;}
 
 /* Grid pos 2,11 'motes */
@@ -931,3 +931,7 @@ a[href|="/dashcon"] {width:250px;height:142px;background-position: 0 -300px;}
 a[href|="/illumineighti"] {width:148px;height:100px;background-position: -250px -300px;}
 a[href|="/twibunny"] {width:100px;height:147px;background-position: -380px -150px;}
 a[href|="/cadheart"] {width:132px;height:200px;background-position: -568px 0;}
+a[href|="/piracybloom"] {width:122px;height:150px;background-position: -398px -300px;}
+a[href|="/surprisedzecora"] {width:91px;height:150px;background-position: -480px -150px;}
+a[href|="/spitheart"] {width:123px;height:200px;background-position: -577px -200px;}
+a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"] {width:202px;height:150px;background-position: 0 -442px;}
