--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -163,7 +163,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  height:750px;
  width:100%;
- background-image:url(%%brodiebelle%%);
+ background-image:url(%%wordsmith-pony%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1275,8 +1275,7 @@ a[href|="/tavicheer"] {
 .flair-flash {background-position: -200% -1900%} /*FLASH GORDON! SAVIOR OF THE UNIVERSE!*/
 .flair-sunset {background-position: -100% -2100%}
 .flair-gilda {background-position: -200% -2100%}
-/*
-.flair-photofinish {background-position: -300% -2100%}
+.flair-thunderlane {background-position: -300% -2100%}
 
 .flair-rrainbowdash {background-position: 0 -2200%}
 .flair-rtwilightsparkle {background-position: -100% -2200%}
@@ -1287,7 +1286,8 @@ a[href|="/tavicheer"] {
 .flair-rrarity {background-position: -100% -2300%}
 .flair-flutterbat {background-position: -200% -2300%}
 .flair-nightmarity {background-position: -300% -2300%}
-You need DC's new flair image to make these active*/
+
+.flair-marinesandwich {background-position: 0 -2400%}
 
 /*HOVER FLAIRS! Because yay. Follow same formating to make a new one*/
 
@@ -1298,7 +1298,7 @@ You need DC's new flair image to make these active*/
 .flair-cmcal {background-position: -300% -100%}
 .flair-cmcal:hover {background-position: -200% -300%} /*For french_guy_al; Tavi Hover*/
 .flair-cmcdc {background-position: -300% -100%}
-.flair-cmcdc:hover {background-position: -300% 0} /*For DoomedCivilian; Applejack Hover*/ 
+.flair-cmcdc:hover {background-position: -300% -2100%} /*For DoomedCivilian; Thunderlane Hover*/ 
 
 /*Doomed Civilians to-add list; Feel free to add to this list!
 Emotes! Main sub has more emotes; They have been moved over, they just need to be messed with. Fear the DC, for he is bored. Lunar edit: Let's try to not change things as often.
@@ -1317,22 +1317,22 @@ a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:v
 a.author[href$="MLP_William"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="MLP_William"]:before {font-size:10px!important; visibility:visible!important; content: "MLP_WiIIiam"}
 
+a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustLoveFluttershy"}
+
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Pylo"}
 .sidecontentbox a.author[href$="DaylightDarkle"]:before {font-size:12px!important; visibility:visible!important; content: "SnapGracklePop"!important}
 
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #ff23ff}
 
-a.author[href$="Clop_Stains"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Clop_Stains"]:before {font-size:10px!important; visibility:visible!important; content: "Pirate Santa"}
-a.author[href$="Pony_Ass"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Pony_Ass"]:before {font-size:10px!important; visibility:visible!important; content: "A Capsule of Dirty Gak"}
-a.author[href$="Filly_wang"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Filly_wang"]:before {font-size:10px!important; visibility:visible!important; content: "Smoke Silly Putty Every Night"}
-a.author[href$="DoomeedCivilian"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="DoomeedCivilian"]:before {font-size:10px!important; visibility:visible!important; content: "Poorly Mimiced Mod Name"}
-
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "Zelly Belly"}
+
+a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is wearing his serious hat"}
+
+a.author[href$="Tenth-Gear"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="Tenth-Gear"]:before {font-size:10px!important; visibility:visible!important; content: "Tenth-Gear the Court Jester"}
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
