Mostly fix some -intensifies shaking

--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -403,5 +403,6 @@
 
 .bpflag-intensifies {
     position: relative;
+    margin: 2px;
     animation: intensifies .2s linear 0s infinite alternate !important;
 }
