--- a/addon/extracss-webkit.css
+++ b/addon/extracss-webkit.css
@@ -395,5 +395,6 @@
 
 .bpflag-intensifies {
     position: relative;
+    margin: 2px;
     -webkit-animation: intensifies .2s linear 0s infinite alternate !important;
 }
